--- a/code/Search_Relevance.ipynb
+++ b/code/Search_Relevance.ipynb
@@ -35,165 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "therapeutic-somerset",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>product_uid</th>\n",
-       "      <th>product_title</th>\n",
-       "      <th>search_term</th>\n",
-       "      <th>relevance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>100001</td>\n",
-       "      <td>Simpson Strong-Tie 12-Gauge Angle</td>\n",
-       "      <td>angle bracket</td>\n",
-       "      <td>3.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>100001</td>\n",
-       "      <td>Simpson Strong-Tie 12-Gauge Angle</td>\n",
-       "      <td>l bracket</td>\n",
-       "      <td>2.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9</td>\n",
-       "      <td>100002</td>\n",
-       "      <td>BEHR Premium Textured DeckOver 1-gal. #SC-141 ...</td>\n",
-       "      <td>deck over</td>\n",
-       "      <td>3.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>16</td>\n",
-       "      <td>100005</td>\n",
-       "      <td>Delta Vero 1-Handle Shower Only Faucet Trim Ki...</td>\n",
-       "      <td>rain shower head</td>\n",
-       "      <td>2.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17</td>\n",
-       "      <td>100005</td>\n",
-       "      <td>Delta Vero 1-Handle Shower Only Faucet Trim Ki...</td>\n",
-       "      <td>shower only faucet</td>\n",
-       "      <td>2.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74062</th>\n",
-       "      <td>221457</td>\n",
-       "      <td>206638</td>\n",
-       "      <td>Atlantic Windowpane 576 CD or 192 DVD Blu-Ray ...</td>\n",
-       "      <td>tv riser glass</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74063</th>\n",
-       "      <td>221458</td>\n",
-       "      <td>206639</td>\n",
-       "      <td>Philips 40-Watt Halogen R20 Flood Light Bulb (...</td>\n",
-       "      <td>r20 halogen light</td>\n",
-       "      <td>3.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74064</th>\n",
-       "      <td>221463</td>\n",
-       "      <td>206641</td>\n",
-       "      <td>Schlage Camelot In-Active Aged Bronze Handlese...</td>\n",
-       "      <td>schlage lock siena half dummy knob with</td>\n",
-       "      <td>2.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74065</th>\n",
-       "      <td>221471</td>\n",
-       "      <td>206648</td>\n",
-       "      <td>Plastec 11 in. x 24 in. Rose Garden Wall Decor...</td>\n",
-       "      <td>zen garden  decor</td>\n",
-       "      <td>3.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74066</th>\n",
-       "      <td>221473</td>\n",
-       "      <td>206650</td>\n",
-       "      <td>LICHTENBERG Pool Blue No. 918 Millennial Ryan ...</td>\n",
-       "      <td>fine sheer curtain 63 inches</td>\n",
-       "      <td>2.33</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>74067 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           id  product_uid                                      product_title  \\\n",
-       "0           2       100001                  Simpson Strong-Tie 12-Gauge Angle   \n",
-       "1           3       100001                  Simpson Strong-Tie 12-Gauge Angle   \n",
-       "2           9       100002  BEHR Premium Textured DeckOver 1-gal. #SC-141 ...   \n",
-       "3          16       100005  Delta Vero 1-Handle Shower Only Faucet Trim Ki...   \n",
-       "4          17       100005  Delta Vero 1-Handle Shower Only Faucet Trim Ki...   \n",
-       "...       ...          ...                                                ...   \n",
-       "74062  221457       206638  Atlantic Windowpane 576 CD or 192 DVD Blu-Ray ...   \n",
-       "74063  221458       206639  Philips 40-Watt Halogen R20 Flood Light Bulb (...   \n",
-       "74064  221463       206641  Schlage Camelot In-Active Aged Bronze Handlese...   \n",
-       "74065  221471       206648  Plastec 11 in. x 24 in. Rose Garden Wall Decor...   \n",
-       "74066  221473       206650  LICHTENBERG Pool Blue No. 918 Millennial Ryan ...   \n",
-       "\n",
-       "                                   search_term  relevance  \n",
-       "0                                angle bracket       3.00  \n",
-       "1                                    l bracket       2.50  \n",
-       "2                                    deck over       3.00  \n",
-       "3                             rain shower head       2.33  \n",
-       "4                           shower only faucet       2.67  \n",
-       "...                                        ...        ...  \n",
-       "74062                           tv riser glass       1.00  \n",
-       "74063                        r20 halogen light       3.00  \n",
-       "74064  schlage lock siena half dummy knob with       2.33  \n",
-       "74065                        zen garden  decor       3.00  \n",
-       "74066             fine sheer curtain 63 inches       2.33  \n",
-       "\n",
-       "[74067 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-f45937856810>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_train\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_train' is not defined"
+     ]
     }
    ],
    "source": [
